# CarSearch

./: .gitmodules  CMakeLists.txt  CMakePresets.json  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
CustomWidgets/: FlowLayout.hpp  ListingContainer.hpp  ListingManager.hpp  PictureCarousel.hpp
Headers/: Listing.hpp  Parser.hpp  PictureManager.hpp  Query.hpp  ThreadPool.hpp
MainWindow/: MainWindow.hpp  MainWindow.ui
